# scala-interpreter

Scala/: .gitignore  Scala.opam  dune-project
Scala/lib/: ast.ml  dune
Scala/tests/: dune  test_ast.t
