(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Sofya Grishkova <sofagriskova1@gmail.com>" "Yuliana Ementyan <ementyan.yuliana@gmail.com>")

(maintainers "Sofya Grishkova <sofagriskova1@gmail.com>" "Yuliana Ementyan <ementyan.yuliana@gmail.com>")

(bug_reports "https://github.com/Kakadu/fp2024")

(homepage "https://github.com/Kakadu/fp2024")

(package
 (name Scala)
 (synopsis "An interpreter for Scala language, with support for By-name Parameters.")
 (description
  "An interpreter for Scala language, with support for By-name Parameters.")
 (documentation "https://kakadu.github.io/fp2024/docs/Scala")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  )
  
)